--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 						</a>
 					</li>
 					<li>
-						<a href="#" target="blank">
+						<a href="https://github.com/Maximilien-BourrieLeyendecker" target="blank">
 							<i class="fa-brands fa-square-github fa-beat" style="color: #00ff41;"></i>
 						</a>
 					</li>
