--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<body>
 
 		<div class=BC0>
-			<video src="images/background-video.mp4" autoplay="" muted=""/video>
+			<video src="images/background-video.mp4" autoplay="" muted="" loop/video>
 		</div>
 
 		<div class="container">
